<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corBG"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="315dp"
        android:layout_height="132dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logodoistommy" />

    <TextView
        android:id="@+id/cadastre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/cadastre_se"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_botao"
        android:elevation="2dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/login"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/esqueciSenha" />

    <Button
        android:id="@+id/médico"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/médico"
        android:textColor="@color/secundaria"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/cadastre"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/paciente"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/paciente"
        android:textColor="@color/secundaria"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.786"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastre"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/instrucoes"
        android:textColor="#ff999999"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boasVindas" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_email"
        android:drawablePadding="15dp"
        android:elevation="3dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textColor="@drawable/custom_fontcolor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto" />

    <EditText
        android:id="@+id/senha"
        android:layout_width="350dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_icon_senha"
        android:drawablePadding="15dp"
        android:elevation="3dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <TextView
        android:id="@+id/boasVindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boasVindas"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/esqueciSenha"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:text="@string/esqueci"
        android:textAllCaps="false"
        android:textColor="@color/TextBody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/senha" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp"
        app:layout_constraintGuide_end="205dp" />

    <ImageButton
        android:id="@+id/help"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/helpPaciente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastre"
        app:layout_constraintVertical_bias="0.0"></ImageButton>


    <ImageButton
        android:id="@+id/help2"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/helpMedico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="@+id/médico"
        app:layout_constraintTop_toBottomOf="@+id/cadastre"
        app:layout_constraintVertical_bias="0.0"></ImageButton>


</androidx.constraintlayout.widget.ConstraintLayout>