<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/cadastro"
        android:textColor="@color/primaria"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textinho"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="10dp"
        android:text="@string/textinho"
        android:textAlignment="center"
        android:textColor="#ff999999"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/cadastro" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="432dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/textinho">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nome_registro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_nome"
                android:drawablePadding="10dp"
                android:elevation="1dp"
                android:ems="30"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/nome"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/cpf_registro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_cpf"
                android:drawablePadding="10dp"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/cpfRegistro"
                android:inputType="number"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email_registro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_email"
                android:drawablePadding="10dp"
                android:elevation="1dp"
                android:ems="20"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/emailRegistro"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/senha_registro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_senha"
                android:drawablePadding="10dp"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/senhaRegistro"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/telefone_registro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_numero"
                android:drawablePadding="10dp"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/convenio_registro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_icon_convenio"
                android:drawablePadding="10dp"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/convenio"
                android:inputType="textPersonName"
                android:paddingStart="25dp"
                android:paddingEnd="20dp"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/prosseguir"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/custom_botton"
        android:backgroundTint="#000000"
        android:elevation="2dp"
        android:fontFamily="@font/raleway_extrabold"
        android:text="@string/prosseguir"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="26dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="26dp" />

</androidx.constraintlayout.widget.ConstraintLayout>